增加对类目的支持

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -69,7 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/x15"
-                    android:text="搜谱APP提供简单方便的在线曲谱搜索功能，以及下载、收藏等功能"
+                    android:text="搜谱APP是一个非商业化的项目，目的在于提供简单方便的在线曲谱搜索功能，以及下载、收藏等功能，方便音乐爱好者。现曲谱库包含20万曲谱数据，40万曲谱图片数据，定期更新（每周4）。由于还处在第一个版本，APP还不稳定，页面也略显粗糙，我们将继续优化和美化工作。"
                     android:textSize="14sp" />
 
             </LinearLayout>
@@ -105,7 +105,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/x15"
-                    android:text="搜谱APP所提供的所有曲谱图片等等信息，全部来自网络，如果涉及版权问题，请联系我们"
+                    android:text="搜谱APP所提供的所有曲谱图片等等信息，全部来自网络，如果涉及版权问题，请联系我们。在此感谢中国曲谱网等其余曲谱网站和个人。"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -141,7 +141,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/x15"
                     android:text="搜谱项目的在于提供良好的曲谱搜索服务，适配Android手机，以及Android平板，对于iOS设备的支持，会在系统趋于稳定的时候提上日程\n
-搜谱项目实际开发、维护、运营团队只有一个人，难免存在不足，望谅解"
+搜谱项目实际开发、维护、运营团队只有一个人，难免存在不足，望谅解。"
                     android:textSize="14sp" />
             </LinearLayout>
 
