--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -45,7 +45,7 @@
                     android:hint="曲谱名/作词/作曲/演唱者"
                     android:imeOptions="actionSearch"
                     android:singleLine="true"
-                    android:textSize="17sp" />
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:id="@+id/search_btn"
@@ -59,6 +59,9 @@
             </LinearLayout>
 
             <com.fynn.fluidlayout.FluidLayout
+                android:paddingBottom="@dimen/x10"
+                android:paddingStart="@dimen/x30"
+                android:paddingEnd="@dimen/x30"
                 android:id="@+id/search_history"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
