--- a/app/src/main/res/layout/layout_progress_dialog.xml
+++ b/app/src/main/res/layout/layout_progress_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/x300"
+    android:layout_width="@dimen/x180"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -28,13 +28,14 @@
             app:indicatorColor="#000000" />
 
         <TextView
-            android:layout_marginTop="10dip"
+            android:layout_marginTop="5dip"
             android:gravity="center"
             android:id="@+id/layout_progress_dialog_message"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Loading"/>
+            android:text="加载中..."
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
