--- a/app/src/main/res/layout/header_home_rv.xml
+++ b/app/src/main/res/layout/header_home_rv.xml
@@ -65,6 +65,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/musicChart_cardview"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -75,13 +76,29 @@
             app:contentPadding="@dimen/x20"
             app:cardCornerRadius="@dimen/x15">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="榜单"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="榜单"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="数据来自网易云"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="8sp" />
+            </LinearLayout>
+
 
         </android.support.v7.widget.CardView>
 
