--- a/app/src/main/res/layout/item_music_chart_layout.xml
+++ b/app/src/main/res/layout/item_music_chart_layout.xml
@@ -7,8 +7,9 @@
 
     <ImageView
         android:id="@+id/music_chart_img"
-        android:layout_width="@dimen/x250"
-        android:layout_height="@dimen/x250" />
+        android:layout_width="@dimen/x320"
+        android:layout_height="@dimen/x250"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_marginStart="@dimen/x20"
