--- a/app/src/main/res/layout/header_home_rv.xml
+++ b/app/src/main/res/layout/header_home_rv.xml
@@ -23,14 +23,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/x130"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
             android:id="@+id/lastUpdateCardView"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/x5"
             android:layout_marginBottom="@dimen/x5"
             android:layout_marginRight="@dimen/x5"
@@ -40,7 +40,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center">
 
@@ -68,7 +68,7 @@
             android:id="@+id/musicChart_cardview"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/x5"
             android:layout_marginBottom="@dimen/x5"
             android:layout_marginRight="@dimen/x10"
@@ -78,7 +78,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center">
 
